[package]
name = "rlgym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
numpy = { version = "0.16.2"}
ndarray = { version = "0.15.4"}
rand = { version = "0.8.5"}
