[package]
name = "rlgym_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
numpy = { version = "0.16.2"}
ndarray = { version = "0.15.4"}
rand = { version = "0.8.5"}
gym = { version = "2.2.1"}
subprocess = { version = "0.2.9"}
registry = { version = "1.2.2"}
winreg = { version = "0.10.1"}
json = { version = "0.12.4"}
glob = { version = "0.3.0"}
serde = { version = "1.0.144"}
serde_json = { version = "1.0.85"}