[package]
name = "rlgym_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html[lib]
[lib]
name = "rlgym_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
ndarray = { version = "0.15.4"}
numpy = { version = "0.17.2"}
rand = { version = "0.8.5"}
gym = { version = "2.2.1"}
subprocess = { version = "0.2.9"}
registry = { version = "1.2.2"}
winreg = { version = "0.10.1"}
json = { version = "0.12.4"}
glob = { version = "0.3.0"}
serde_json = { version = "1.0.85"}
sysinfo = { version = "0.26.2"}
regex = { version = "1.6.0"}
webbrowser = { version = "0.8.0"}
fs2 = { version = "0.4.3"}
zip = { version = "0.6.2"}
crossbeam-channel = { version = "0.5.6"}
rayon = { version = "1.5.3"}
itertools = { version = "0.10.5"}
[dependencies.windows]
version = "0.41.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes"
]